# Prime_numbers

./: .gitignore  .travis.yml  AKS.cpp  CMakeLists.txt  CPolyMod.cpp  Prime.txt  README.md  eratosthene.cpp  eratosthene.h  facteurs.cpp  facteurs.h  highly_composed.cpp  main.cpp  memory_bound.cpp  memory_bound.h  memory_bound.hpp  millerRabin.cpp  millerRabin.h  millerRabin.hpp  pocklington.cpp  pocklington.h  pocklington.hpp  test.sh
Gui/: CMakeLists.txt  gui.cpp
Optimisation/: main.cpp  test.sh
Optimisation/highly_composite/: highly_composite.hpp
Optimisation/primality_deter/: AKS.cpp  AKS_CONJECTURE.cpp  AKS_CONJECTURE.hpp  CPolyMod.hpp  eratosthene.cpp  eratosthene.hpp  euclide.cpp  memory_bound.cpp  memory_bound.hpp  pocklington.cpp
Parallelisme/: .gitignore  CMakeLists.txt  Makefile  Prime.txt  README.md  batch.sh  main.cpp  master_slave.cpp  test.sh
Parallelisme/highly_composite/: Makefile  highly_composite.hpp
Parallelisme/primality_deter/: AKS.cpp  AKS.cpp~  AKS.hpp~  AKS_CONJECTURE.cpp  AKS_CONJECTURE.cpp~  AKS_CONJECTURE.hpp  AKS_CONJECTURE.hpp~  CMakeLists.txt  Makefile  eratosthene.cpp  eratosthene.hpp  memory_bound.cpp
Parallelisme/primality_proba/: Makefile
Prime_numbers/: CMakeLists.txt  README.md  main.cpp  test.sh
Prime_numbers/highly_composite/: CMakeLists.txt
Prime_numbers/primality_deter/: AKS.cpp  CMakeLists.txt  eratosthene.hpp  euclide.cpp  facteurs.hpp  matrix3.cpp
Prime_numbers/primality_proba/: millerRabin.hpp
docs/Rapport/: Rapport.tex  references.bib
docs/Rapport_s2/: Rapport_s2.dvi  Rapport_s2.tex  references2.bib
docs/Soutenance/: Soutenance.nav  Soutenance.snm  Soutenance.tex
docs/Soutenance_s2/: Soutenance.nav  Soutenance.snm  Soutenance.tex
docs/tex/: myInfolines.sty  preambule.tex  preambuleSlides.tex
highly_composite/: highly_composite.cpp  highly_composite.hpp
primality_deter/: AKS.cpp  AKS.hpp  eratosthene.cpp  eratosthene.hpp  euclide.cpp  euclide.hpp  facteurs.cpp  facteurs.hpp  memory_bound.cpp  memory_bound.hpp  pocklington.cpp  pocklington.hpp
primality_proba/: CMakeLists.txt  millerRabin.cpp  millerRabin.hpp
